Server - Swagger documentation for sessions signin using Google and signout
